# test-suite-coverage-metrics

./: .gitignore  README.md  config.py  pyproject.toml
.github/workflows/: generate.yml
app/: __init__.py  skipped_statements.py
app/plugins/: __init__.py  analysers.py  reporter.py
app/templates/: coverage_graphs.jinja  coverage_metrics.jinja
app/templates/components/: charts-css.jinja  charts.jinja
app/templates/components/charts/: statements_count copy.html  statements_count.jinja
outputs/: coverage_graphs.html  vc-bitstring-status-list-test-suite.md  vc-data-model-2.0-test-suite.md  vc-di-bbs-test-suite.md  vc-di-ecdsa-test-suite.md  vc-di-eddsa-test-suite.md
